# prediction_deliverance

./: .gitignore  predicted_next_week.json  requirements.txt
checkpoints/: predicted_next_week.json
hybrid_schedule_project.1.1/: pyproject.toml
hybrid_schedule_project.1.1/docs/: DECISIONES_DE_DISENO.md  MEJORAS_IMPLEMENTADAS.md
hybrid_schedule_project.1.1/examples/: registry.yaml
hybrid_schedule_project.1.1/reports/run_01/: epoch_metrics.csv  epoch_metrics.jsonl  final_report.md  leave_one_database_out_metrics.csv  summary.json
hybrid_schedule_project.1.1/reports/run_01/leave_one_db_nexus_10y/: backtest_weekly_metrics.csv
hybrid_schedule_project.1.1/reports/smoke_run/: occurrence_model.pt
hybrid_schedule_project.1.1/scripts/: train.py
hybrid_schedule_project.1.1/src/hybrid_schedule/evaluation/: matching.py
hybrid_schedule_project.1.1/src/hybrid_schedule/inference/: predictor.py
hybrid_schedule_project.1.1/src/hybrid_schedule/models/: occurrence_residual.py  temporal_residual.py
hybrid_schedule_project.1.1/src/hybrid_schedule/reporting/: report_builder.py
hybrid_schedule_project.1.1/src/hybrid_schedule/retrieval/: template_retriever.py
hybrid_schedule_project.1.1/src/hybrid_schedule/training/: __init__.py  datasets.py  losses.py
unified_schedule_project_v1/: pyproject.toml  registry.yaml  requirements.txt
unified_schedule_project_v1/configs/: default.yaml
unified_schedule_project_v1/examples/: registry_template.yaml
unified_schedule_project_v1/reports/run_01/: final_report.md
unified_schedule_project_v1/scripts/: train.py
(+925 files in other folders)
