[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-schedule-forecasting"
version = "0.1.0"
description = "Hybrid multi-database weekly schedule forecasting with neural residuals and exact scheduling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "pyyaml",
  "torch",
  "scipy",
  "scikit-learn",
  "matplotlib",
  "ortools"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
