[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-schedule-forecasting"
version = "0.1.0"
description = "Single large-model weekly schedule forecasting with joint count-time-duration decoding"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "pyyaml",
  "torch",
  "scipy",
  "scikit-learn",
  "matplotlib"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
